# rpi-pico-lab

./: .gitignore  .gitmodules  README.md
74hc595/: CMakeLists.txt  README.md  main.c  tft.c  tft_r61581.c
D51E5TA7601/: CMakeLists.txt  d51e5ta7601_gpio.c  main.c  ns2009.c
D51E5TA7601-lvgl/: CMakeLists.txt  d51e5ta7601_gpio.c  d51e5ta7601_pio.c  i80.c  lv_conf.h  main.c  ns2009.c
D51E5TA7601-lvgl-keypad/: CMakeLists.txt  d51e5ta7601_pio.c  keypad.c  keypad.h  lv_conf.h  main.c  ns2009.c  pcf8574.c
D51E5TA7601-lvgl-keypad/pio/: i80.c
D51E5TA7601-lvgl-keypad/porting/: lv_port_indev_template.c
D51E5TA7601-lvgl/pio/: i80.c
D51E5TA7601-lvgl/porting/: lv_port_disp_template.c
FL350HVC03V10/: CMakeLists.txt  fl350hvc03v10_gpio.c  ns2009.c
FL350HVC03V10-lvgl/: CMakeLists.txt  fl350hvc03v10_gpio.c  fl350hvc03v10_pio.c  lv_conf.h  main.c
FL350HVC03V10-lvgl/pio/: i80.c
FL350HVC03V10-lvgl/porting/: lv_port_disp_template.c
aht10/: CMakeLists.txt  aht10.c  aht10.h  main.c
backups/: daplink-program.sh  daplink-reset.sh
bh1750/: CMakeLists.txt  bh1750.c  bh1750.h  main.c
blink/: CMakeLists.txt  main.c
buzzer/: CMakeLists.txt  main.c
buzzer/tone/: melodies.h
cst816t/: CMakeLists.txt  main.c
ds1307/: CMakeLists.txt  main.c
ds1307/.cache/clangd/index/: main.c.46AACD7832D94EE3.idx
epink/: CMakeLists.txt
epink-1.54/: CMakeLists.txt  main.c
epink-1.54/src/: epink.c
epink-allinone/: CMakeLists.txt
epink-allinone/tests/: test_random.c
epink-lvgl/: CMakeLists.txt  logo.c  lv_conf.h  main.c
epink-lvgl/port/: lv_port_disp.c
epink-lvgl/ui/: ui.c
epink/include/: common.h  epink.h  port.h
epink/src/: epink.c  port.c
epink/src/devices/: epink_luatos_1.54.c
epink/src/drivers/: default_driver.c
epink/tests/: allinone_main.c
hstx-lvgl/: CMakeLists.txt  gc9a01.c  hstx.c  main.c
hstx-lvgl/port/: lv_port_disp.c
ili9486-spi/: ili9486_spi.c
ili9486-spi-lvgl/: CMakeLists.txt  ili9486_pio.c  ili9486_spi.c  lv_conf.h  main.c
ili9486-spi-lvgl/pio/: pio_spi_tx.c  pio_spi_tx.pio
ili9486-spi-lvgl/porting/: lv_port_disp_template.c
ili9486-spi/pio/: pio_spi_tx.c
ili9488/: CMakeLists.txt  ili9488_gpio.c  ili9488_pio.c
ili9488-lvgl/: CMakeLists.txt  ili9488_gpio.c  ili9488_pio.c  main.c
ili9488-lvgl-keypad/: CMakeLists.txt  ili9488_pio.c  keypad.c  lv_conf.h  main.c
ili9488-lvgl-keypad/pio/: i80.c  i80.pio
ili9488-lvgl-keypad/porting/: lv_port_indev_template.c
ili9488-lvgl-keypad/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
ili9488-lvgl-keypad/ui/components/: ui_comp_hook.c
ili9488-lvgl-keypad/ui/fonts/: ui_font_NotoSansSCMedium18.c  ui_font_NotoSansSCMedium24.c
ili9488-lvgl-keypad/ui/screens/: ui_ScreenHome.c
ili9488-lvgl-lichee/: ili9488_pio.c  lv_conf.h  main.c
ili9488-lvgl-lichee/pio/: i80.c
ili9488-lvgl-lichee/porting/: lv_port_disp_template.c
ili9488-lvgl/pio/: CMakeLists.txt  i80.c
ili9488/pio/: i80.c
keypad/: CMakeLists.txt  keypad.c  keypad.h  main.c
lcd1602/: CMakeLists.txt  main.c
lg4572b/: CMakeLists.txt  lg4572b_gpio.c
lg4572b-lvgl/: CMakeLists.txt  lg4572b_gpio.c  lg4572b_pio.c  lv_conf.h  main.c
lg4572b-lvgl/pio/: i80.c
lg4572b-lvgl/porting/: lv_port_disp_template.c
lvgl-test/: CMakeLists.txt  lv_conf.h  main.c
lvgl-test/port/: lv_port_disp.c
lvgl-test/ui/: README.md
mb85rc16/: CMakeLists.txt  main.c  mb85rc16.c  mb85rc16.h
pcf8474_keypad/: CMakeLists.txt  i2c_tools.c  keypad.c  keypad.h  pcf8574.c
pcf8474_keypad/example/: CMakeLists.txt  example.c
pico_dm_qd3503728/: CMakeLists.txt  backlight.c  backlight.h  ft6236.c  ft6236.h  i2c_tools.c  ili9488.h  ili9488_gpio.c  ili9488_pio.c  lv_conf.h  main.c
pico_dm_qd3503728/factory/: CMakeLists.txt  factory_test.c  test.c  tools.c  tools.h
pico_dm_qd3503728/include/: backlight.h  ili9488.h
pico_dm_qd3503728/pio/: CMakeLists.txt  i80.c
pico_dm_qd3503728/porting/: lv_port_disp_template.c  lv_port_disp_template.h  lv_port_indev_template.c
pio/pio_byte_out/: CMakeLists.txt  main.c  test.pio
pio/pio_i80/: CMakeLists.txt  i80.c  i80.pio
pio/pio_pull_example1/: main.c  test.pio
pio/pio_squarewave/: CMakeLists.txt  CMakeLists.txts  squarewave.c  squarewave.pio
pio/pio_ws2812b/: .clang-format  CMakeLists.txt  main.c  ws2812b.pio
psram-mpu/: CMakeLists.txt  hardfault.c  main.c
psram-mpu/debugger/: openocd.gdb  run-openocd-gdb.sh
psram-mpu/tests/: psram-test.c
psram-rp2350-riscv-linux/: CMakeLists.txt  Makefile  debug.gdb  main.c
r61505w/: CMakeLists.txt  r61505w_gpio.c
rpi_display_3inc5/: CMakeLists.txt  README.md  ili9486_spi.c
rpi_display_3inc5/pio/: pio_spi_tx.c  pio_spi_tx.pio
soldering_test/: CMakeLists.txt  main.c
soldering_test/pio/: CMakeLists.txt  test.c  test.pio
ssd1306/: main.c  ssd1306.h
ssd1306-lvgl/: CMakeLists.txt  lv_conf.h  main.c  ssd1306.c  ssd1306.h
ssd1306-lvgl/port/: lv_port_disp.c  lv_port_disp.h  ssd1306.c  ssd1306.h
ssd1327-lvgl/: CMakeLists.txt  lv_conf.h  main.c
ssd1327-lvgl/pio/: pio_spi_tx.pio
ssd1327-lvgl/port/: lv_port_disp.c
ssd1681-lvgl/: CMakeLists.txt  lv_conf.h  main.c
ssd1681-lvgl/include/: st7789v.h
ssd1681-lvgl/port/: lv_port_disp.c  lv_port_disp.h
st7305/: CMakeLists.txt  main.c  pic_test.c
st7567/: CMakeLists.txt  main.c
st7735s/: CMakeLists.txt  main.c
st7735s-lvgl/: CMakeLists.txt  lv_conf.h  main.c  st7735s.h
st7735s-lvgl/port/: lv_port_disp.c  lv_port_disp.h
st7789v/: CMakeLists.txt  main.c
st7789v-lvgl/: CMakeLists.txt  lv_conf.h  main.c
st7789v-lvgl/pio/: CMakeLists.txt  pio_spi_tx.c
st7789v-lvgl/port/: lv_port_disp.c  lv_port_disp.h
st77916-qspi/: CMakeLists.txt  main.c  main.c.orig
tools/: daplink-reset.sh
udd/: CMakeLists.txt  dev_speedtest.py  main.c
